My inspiration section done

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         <div class="development-reason">
           <div>
             <h2>I will do coding and earn money</h2>
-            <p></p>
             <p>I'm eager to leverage my coding skills to earn a good living and achieve financial stability.</p>
             <button class="reason-button">Learn more</button>
           </div>
@@ -59,7 +58,8 @@
       <hr />
       <section class="my-inspiration">
         <h1>My inspiration</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, necessitatibus? Molestias officiis quam laudantium, quisquam suscipit aliquam molestiae! Culpa, omnis.</p>
+        <p></p>
+        <p>My biggest inspiration is Jhankar Mahbub, the founder of Programming Hero. His dedication to making programming accessible to everyone and his unwavering belief in the power of education have deeply inspired me to pursue my passion for web development.</p>
         <iframe width="640" height="360" src="https://www.youtube.com/embed/GFyqryC0UWA?si=Pgo3ievIJYuC1eB7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
