Current target section done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <section class="why-web-dev">
         <h1>Why Web Development?</h1>
-        <p>I'm fascinated by the power of web development to transform ideas into reality. I'm driven by the desire to create intuitive and engaging user experiences that leave a lasting impact.  I believe that web development offers endless opportunities to innovate, solve problems, and connect people globally.</p>
+        <p>I'm fascinated by the power of web development to transform ideas into reality. I'm driven by the desire to create intuitive and engaging user experiences that leave a lasting impact. I believe that web development offers endless opportunities to innovate, solve problems, and connect people globally.</p>
         <div class="development-reason">
           <div>
             <h2>I will do coding and change the world</h2>
@@ -58,7 +58,6 @@
       <hr />
       <section class="my-inspiration">
         <h1>My inspiration</h1>
-        <p></p>
         <p>My biggest inspiration is Jhankar Mahbub, the founder of Programming Hero. His dedication to making programming accessible to everyone and his unwavering belief in the power of education have deeply inspired me to pursue my passion for web development.</p>
         <iframe width="640" height="360" src="https://www.youtube.com/embed/GFyqryC0UWA?si=Pgo3ievIJYuC1eB7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
@@ -66,24 +65,24 @@
       <hr />
       <section class="current-target">
         <h1>My Current Target</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, perspiciatis maiores. Delectus, architecto labore laboriosam itaque accusamus reprehenderit voluptatum illum.</p>
+        <p>My current goal is to become proficient in the core technologies of web development: HTML, CSS, and JavaScript. I'm actively learning these languages through online courses, tutorials, and personal projects. I'm also exploring frameworks and libraries like React to expand my skillset.</p>
         <div class="languages">
           <div class="p-language" style="background-color: rgb(255, 228, 228)">
             <img src="assets/html.png" />
             <h2>HTML</h2>
-            <p>Lorem ipsum t. A quidem nostrum autem porro quas. Inventore!</p>
+            <p>The foundation of all web pages, providing structure and content.</p>
             <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
           </div>
           <div class="p-language" style="background-color: rgb(230, 255, 210)">
             <img src="assets/css.png" />
             <h2>CSS</h2>
-            <p>Ad consectetur corporis, impedit e veritatis obcaecati deserunt expedita totam? Voluptates.</p>
+            <p>Styling web pages with colors, fonts, and layout for a visually appealing experience.</p>
             <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
           </div>
           <div class="p-language" style="background-color: rgb(206, 228, 255)">
             <img src="assets/js.png" />
             <h2>JavaScript</h2>
-            <p>Assumenda m, maxime natus, similique vitae laboriosam modi facilis voluptate accusantium.</p>
+            <p>Bringing web pages to life with interactivity and dynamic elements.</p>
             <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
           </div>
         </div>
