--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       </section>
 
       <hr />
+
       <section class="current-target">
         <h1>My Current Target</h1>
         <p>My current goal is to become proficient in the core technologies of web development: HTML, CSS, and JavaScript. I'm actively learning these languages through online courses, tutorials, and personal projects. I'm also exploring frameworks and libraries like React to expand my skillset.</p>
@@ -91,10 +92,7 @@
 
       <section class="support">
         <h2>I need Support</h2>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam explicabo cumque possimus nisi<br />
-          eos fugiat illo qui officiis id accusamus.
-        </p>
+        <p>As I embark on this exciting journey, I would greatly appreciate your support and guidance. Your feedback, suggestions, and encouragement would be invaluable in helping me improve my skills and achieve my goals. Whether it's advice on learning resources, project ideas, or industry insights, I'm eager to learn from your experience.</p>
         <div>
           <input id="feedback-input" type="text" placeholder="Suggenst me any feedback" />
           <input type="submit" />
