All lorem Ipsum is replaced with relavant text

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
       <section class="banner">
         <img class="banner-img" src="./assets/Group.png" />
-        <h1>"In the near future, I hope to become a Developer."</h1>
+        <h1>"Aspiring to be a Proficient Developer."</h1>
         <div>
-          <p>My journey towards becoming a skilled and successful web developer has just begun, and I'm eager to learn, grow, and make a positive impact everywhere.</p>
-          <p>I'm passionate about web development and excited to embark on this fulfilling career path.</p>
+          <p>My journey into the dynamic world of web development is underway, fueled by a passion for learning and a desire to create impactful digital experiences.</p>
+          <p>I am enthusiastic about the possibilities that web development offers and committed to building a successful career in this field.</p>
         </div>
         <a href="#footer">Contact Me</a>
       </section>
@@ -28,11 +28,11 @@
     <main>
       <section class="why-web-dev">
         <h1>Why Web Development?</h1>
-        <p>I'm fascinated by the power of web development to transform ideas into reality. I'm driven by the desire to create intuitive and engaging user experiences that leave a lasting impact. I believe that web development offers endless opportunities to innovate, solve problems, and connect people globally.</p>
+        <p>I am captivated by the transformative power of web development, its ability to bring ideas to life through intuitive and engaging user interfaces.  Driven by the potential to innovate and connect people globally, I believe web development offers a unique platform for positive change.</p>
         <div class="development-reason">
           <div>
-            <h2>I will do coding and change the world</h2>
-            <p>I'm enthusiastic about coding and eager to contribute to a better future through technology.</p>
+            <h2>I will code and contribute to a better world</h2>
+            <p>I believe in the power of code to shape a brighter future and am passionate about using my skills to make a meaningful difference.</p>
             <button class="reason-button">Learn more</button>
           </div>
           <img src="assets/Layer_1.png" />
@@ -40,15 +40,15 @@
         <div class="development-reason">
           <img src="assets/Group_3.png" />
           <div>
-            <h2>I will help people by creating modern web system</h2>
-            <p>I'm eager to leverage my coding skills to build a successful and financially rewarding career.</p>
+            <h2>I will empower others by building modern web solutions</h2>
+            <p>I aspire to build cutting-edge web systems that empower individuals and organizations to thrive in the digital age.</p>
             <button class="reason-button">Learn more</button>
           </div>
         </div>
         <div class="development-reason">
           <div>
-            <h2>I will do coding and earn money</h2>
-            <p>I'm eager to leverage my coding skills to earn a good living and achieve financial stability.</p>
+            <h2>I will leverage coding to achieve financial independence</h2>
+            <p>I recognize the potential of coding as a valuable skillset that can lead to financial security and career advancement.</p>
             <button class="reason-button">Learn more</button>
           </div>
           <img src="assets/Group_4.png" />
@@ -58,7 +58,7 @@
       <hr />
       <section class="my-inspiration">
         <h1>My inspiration</h1>
-        <p>My biggest inspiration is Jhankar Mahbub, the founder of Programming Hero. His dedication to making programming accessible to everyone and his unwavering belief in the power of education have deeply inspired me to pursue my passion for web development.</p>
+        <p>Jhankar Mahbub, the visionary behind Programming Hero, serves as my primary inspiration. His commitment to democratizing programming education and his unwavering belief in its potential have profoundly influenced my pursuit of web development.</p>
         <iframe width="640" height="360" src="https://www.youtube.com/embed/GFyqryC0UWA?si=Pgo3ievIJYuC1eB7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
 
@@ -66,24 +66,24 @@
 
       <section class="current-target">
         <h1>My Current Target</h1>
-        <p>My current goal is to become proficient in the core technologies of web development: HTML, CSS, and JavaScript. I'm actively learning these languages through online courses, tutorials, and personal projects. I'm also exploring frameworks and libraries like React to expand my skillset.</p>
+        <p>My immediate objective is to master the foundational technologies of web development: HTML, CSS, and JavaScript. I am actively immersing myself in these languages through online courses, tutorials, and hands-on projects, while also exploring advanced frameworks like React to broaden my skillset.</p>
         <div class="languages">
           <div class="p-language" style="background-color: rgb(255, 228, 228)">
             <img src="assets/html.png" />
             <h2>HTML</h2>
-            <p>The foundation of all web pages, providing structure and content.</p>
+            <p>The structural backbone of web pages, defining content and organization.</p>
             <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
           </div>
           <div class="p-language" style="background-color: rgb(230, 255, 210)">
             <img src="assets/css.png" />
             <h2>CSS</h2>
-            <p>Styling web pages with colors, fonts, and layout for a visually appealing experience.</p>
+            <p>The language of visual design for the web, shaping aesthetics and user experience through layout and style.</p>
             <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
           </div>
           <div class="p-language" style="background-color: rgb(206, 228, 255)">
             <img src="assets/js.png" />
             <h2>JavaScript</h2>
-            <p>Bringing web pages to life with interactivity and dynamic elements.</p>
+            <p>The engine of interactivity on the web, enabling dynamic functionality and user engagement.</p>
             <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
           </div>
         </div>
@@ -92,7 +92,7 @@
 
       <section class="support">
         <h2>I need Support</h2>
-        <p>As I embark on this exciting journey, I would greatly appreciate your support and guidance. Your feedback, suggestions, and encouragement would be invaluable in helping me improve my skills and achieve my goals. Whether it's advice on learning resources, project ideas, or industry insights, I'm eager to learn from your experience.</p>
+        <p>As I embark on this exciting journey, I welcome your support and guidance. Your feedback, insights, and encouragement would be invaluable in my development as a web developer. I am eager to learn from your experience, whether it's through advice on learning resources, project ideas, or industry perspectives.</p>
         <div>
           <input id="feedback-input" type="text" placeholder="Suggenst me any feedback" />
           <input type="submit" />
