--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Mahin</title>
+    <title>SH. Siam</title>
   </head>
 
   <body>
@@ -28,7 +28,7 @@
     <main>
       <section class="why-web-dev">
         <h1>Why Web Development?</h1>
-        <p>I am captivated by the transformative power of web development, its ability to bring ideas to life through intuitive and engaging user interfaces.  Driven by the potential to innovate and connect people globally, I believe web development offers a unique platform for positive change.</p>
+        <p>I am captivated by the transformative power of web development, its ability to bring ideas to life through intuitive and engaging user interfaces. Driven by the potential to innovate and connect people globally, I believe web development offers a unique platform for positive change.</p>
         <div class="development-reason">
           <div>
             <h2>I will code and contribute to a better world</h2>
